--- a/SelectionCommittee_/src/main/resources/messages/messages_en.properties
+++ b/SelectionCommittee_/src/main/resources/messages/messages_en.properties
@@ -25,3 +25,6 @@ lang.error.occurred = Error occurred
 lang.error.occurred.text = An error has occurred. Please contact the administrator
 
 lang.all.users = All users
+
+lang.reg.on.faculty = Registration on faculty
+lang.show.applications = My applications
